Fix hidden button on mobile screen

--- a/src/resources/UpdateAccount.css
+++ b/src/resources/UpdateAccount.css
@@ -1,7 +1,3 @@
-#UpdateAccount-Container {
-  height: 100vh;
-}
-
 #UpdateAccount-Container .Circular {
   width: 150px;
   height: 150px;
@@ -30,6 +26,7 @@
 }
 
  #UpdateAccount-Container .UpdateAccount-FormWrapper {
+   height: 100%;
   width: 75%;
   margin: 0 auto;
 }
